--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@reduxjs/toolkit": "^1.9.1",
+    "@tensorflow-models/toxicity": "^1.2.2",
+    "@tensorflow/tfjs": "^4.1.0",
     "@types/node": "18.11.10",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -19,13 +21,18 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.6",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.6.3",
+    "netlify-cli": "^12.2.9",
     "next": "13.0.6",
     "next-redux-wrapper": "^8.0.0",
     "next-router": "^1.3.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
-    "sass": "^1.56.1",
+    "react-slick": "^0.29.0",
+    "sass": "^1.57.1",
+    "slick-carousel": "^1.8.1",
     "typescript": "4.9.3"
   }
 }
